# packdb

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  config.txt  debug_output.txt  highs_model.mps  run.sh  setup.sh
src/packdb/: CMakeLists.txt
src/packdb/gurobi/: CMakeLists.txt  gurobi_loader.cpp  gurobi_loader.hpp  gurobi_solver.cpp
src/packdb/naive/: CMakeLists.txt  deterministic_naive.cpp
src/packdb/symbolic/: CMakeLists.txt  decide_symbolic.cpp
src/packdb/util/: debug.cpp
src/packdb/utility/: CMakeLists.txt  debug.cpp  ilp_model_builder.cpp  ilp_solver.cpp
tools/pythonpkg/: .gitignore  MANIFEST.in  README.md  clean.sh  duckdb_python.cpp  pyproject.toml  setup.py  test_packdb.py
tools/pythonpkg/adbc_driver_packdb/: __init__.py
tools/pythonpkg/packdb/: __init__.py
tools/pythonpkg/packdb-stubs/: __init__.pyi
tools/pythonpkg/packdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/pythonpkg/packdb/experimental/spark/: _globals.py  conf.py  context.py
tools/pythonpkg/packdb/functional/: __init__.py
tools/pythonpkg/packdb/typing/: __init__.py
tools/pythonpkg/packdb/value/: constant.py
tools/pythonpkg/tests/: conftest.py
tools/pythonpkg/tests/coverage/: test_pandas_categorical_coverage.py
tools/pythonpkg/tests/extensions/: test_extensions_loading.py  test_httpfs.py
tools/pythonpkg/tests/extensions/json/: test_read_json.py
tools/pythonpkg/tests/fast/: test_alex_multithread.py  test_all_types.py  test_ambiguous_prepare.py  test_case_alias.py  test_context_manager.py  test_duckdb_api.py  test_expression.py  test_filesystem.py  test_get_table_names.py  test_import_export.py  test_insert.py  test_many_con_same_file.py  test_map.py  test_module.py  test_multi_statement.py  test_multithread.py  test_non_default_conn.py  test_parameter_list.py  test_parquet.py  test_pytorch.py  test_relation.py  test_replacement_scan.py  test_result.py  test_runtime_error.py  test_string_annotation.py  test_tf.py  test_transaction.py  test_type.py  test_type_explicit.py  test_unicode.py  test_union.py  test_value.py  test_version.py  test_windows_abs_path.py
tools/pythonpkg/tests/fast/adbc/: test_adbc.py  test_connection_get_info.py
tools/pythonpkg/tests/fast/api/: test_3324.py  test_3654.py  test_3728.py  test_6315.py  test_attribute_getter.py  test_config.py  test_connection_close.py  test_connection_interrupt.py  test_cursor.py  test_dbapi00.py  test_dbapi01.py  test_dbapi08.py  test_dbapi11.py  test_dbapi12.py  test_dbapi_fetch.py  test_duckdb_connection.py  test_duckdb_execute.py  test_duckdb_query.py  test_explain.py  test_fsspec.py  test_insert_into.py  test_join.py  test_native_tz.py  test_query_interrupt.py  test_read_csv.py  test_relation_to_view.py  test_streaming_result.py  test_to_csv.py  test_to_parquet.py  test_with_propagating_exceptions.py
tools/pythonpkg/tests/fast/arrow/: parquet_write_roundtrip.py  test_10795.py  test_12384.py  test_14344.py  test_2426.py  test_5547.py  test_6584.py  test_6796.py  test_7652.py  test_7699.py  test_8522.py  test_9443.py  test_arrow_batch_index.py  test_arrow_case_sensitive.py  test_arrow_decimal256.py  test_arrow_fetch.py  (+34 more)
tools/pythonpkg/tests/slow/: test_h2oai_arrow.py
tools/pythonpkg/tests/spark_namespace/: errors.py
tools/pythonpkg/tests/stubs/: test_stubs.py
(+787 files in other folders)
