[build-system]
requires = [
	"setuptools>=60",
	"setuptools_scm>=6.4",
	"pybind11>=2.12.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "packdb"
description = "PackDB - DuckDB with DECIDE clause for optimization queries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HUDA Lab", email = "huda-lab@nyu.edu"}
]
keywords = ["database", "sql", "olap", "optimization", "packdb", "duckdb", "ilp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
Homepage = "https://huda-lab.github.io/packdb"
Documentation = "https://huda-lab.github.io/packdb/documentation.html"
Repository = "https://github.com/huda-lab/packdb"
Issues = "https://github.com/huda-lab/packdb/issues"

[tool.setuptools_scm]
root = "../.."
local_scheme = "no-local-version"

### CI Builwheel configurations ###

# Default config runs all tests and requires at least one extension to be tested against
[tool.cibuildwheel]
dependency-versions = "latest"
before-build = 'pip install numpy>=2.0'
before-test = 'python scripts/optional_requirements.py'
test-requires = 'pytest'
test-command = 'PACKDB_PYTHON_TEST_EXTENSION_PATH={project} PACKDB_PYTHON_TEST_EXTENSION_REQUIRED=1 python -m pytest {project}/tests --verbose'

[tool.cibuildwheel.environment]
PIP_CONSTRAINT = 'build-constraints.txt'

[[tool.cibuildwheel.overrides]]
select = [
    "*-musllinux*", # For musllinux we currently don't build extensions yet
    "*i686*", # For 32 bit we don't build extensions
    "*aarch64*", # For aarch64 we don't build extensions
]
test-command = "python -m pytest {project}/tests/fast --verbose"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
test-command = "python -m pytest {project}/tests/fast --verbose"

# See https://github.com/duckdblabs/duckdb-internal/issues/1923 for context
[tool.cibuildwheel.macos]
before-test = 'python scripts/optional_requirements.py --exclude polars --exclude tensorflow'
